--- a/roles/cart/templates/cart.service
+++ b/roles/cart/templates/cart.service
@@ -2,8 +2,8 @@
 Description = Cart Service
 [Service]
 User=roboshop
-Environment=REDIS_HOST=redis-dev.devopsazurepractice.online
-Environment=CATALOGUE_HOST=catalogue-dev.devopsazurepractice.online
+Environment=REDIS_HOST=redis-dev.devopsazurepractice.store
+Environment=CATALOGUE_HOST=catalogue-dev.devopsazurepractice.store
 Environment=CATALOGUE_PORT=8080
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=cart
