--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -17,6 +17,6 @@
 
 - name: Load Master data
   community.mongodb.mongodb_shell:
-    login_host: mongodb-dev.devopsazurepractice.online
+    login_host: mongodb-dev.devopsazurepractice.store
     file: "/app/db/master-data.js"
     idempotent: yes
