--- a/roles/payment/templates/payment.service
+++ b/roles/payment/templates/payment.service
@@ -4,11 +4,11 @@ Description=Payment Service
 [Service]
 User=root
 WorkingDirectory=/app
-Environment=CART_HOST=cart-dev.devopsazurepractice.online
+Environment=CART_HOST=cart-dev.devopsazurepractice.store
 Environment=CART_PORT=8080
-Environment=USER_HOST=user-dev.devopsazurepractice.online
+Environment=USER_HOST=user-dev.devopsazurepractice.store
 Environment=USER_PORT=8080
-Environment=AMQP_HOST=rabbitmq-dev.devopsazurepractice.online
+Environment=AMQP_HOST=rabbitmq-dev.devopsazurepractice.store
 Environment=AMQP_USER=roboshop
 Environment=AMQP_PASS=roboshop123
 
