--- a/roles/shipping/tasks/main.yml
+++ b/roles/shipping/tasks/main.yml
@@ -12,7 +12,7 @@
 
 
 - name: LoadSchema
-  ansible.builtin.shell: mysql -h mysql-dev.devopsazurepractice.online -uroot -pRoboShop@1 </app/db/{{ item }}.sql
+  ansible.builtin.shell: mysql -h mysql-dev.devopsazurepractice.store -uroot -pRoboShop@1 </app/db/{{ item }}.sql
   loop:
      - schema
      - app-user
@@ -25,7 +25,7 @@
 #    state: import
 #    name: all
 #    target: /app/db/schema.sql
-#    login_host: mysql-dev.devopsazurepractice.online
+#    login_host: mysql-dev.devopsazurepractice.store
 #    login_user: root
 #    login_password: RoboShop@1
 #
@@ -34,7 +34,7 @@
 #    state: import
 #    name: all
 #    target: /app/db/app-user.sql
-#    login_host: mysql-dev.devopsazurepractice.online
+#    login_host: mysql-dev.devopsazurepractice.store
 #    login_user: root
 #    login_password: RoboShop@1
 #
@@ -43,7 +43,7 @@
 #    state: import
 #    name: all
 #    target: /app/db/master-data.sql
-#    login_host: mysql-dev.devopsazurepractice.online
+#    login_host: mysql-dev.devopsazurepractice.store
 #    login_user: root
 #    login_password: RoboShop@1
 
